enabling delete and update functionality and fixing some bugs

--- a/client/src/Components/Admin/DeviceForm/DeviceForm.css
+++ b/client/src/Components/Admin/DeviceForm/DeviceForm.css
@@ -53,7 +53,7 @@
 }
 
 .members__form form .form-button button:hover {
-    background-color: var(--dark-green); /* Darker color on hover */
+    background-color: var(--dark); /* Darker color on hover */
 }
 
 /* Adjustments for smaller screens */
