--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,15 +11,15 @@ li {
     list-style: none;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
 h5,
 h6,
 p {
-    /* color: var(--black); */
-}
+    color: var(--black);
+} */
 
 a {
     text-decoration: none;
